--- a/package.json
+++ b/package.json
@@ -17,20 +17,20 @@
   "devDependencies": {
     "autoprefixer": "^6.7.7",
     "gulp": "^3.9.1",
-    "gulp-load-plugins": "^1.5.0",
-    "lost": "^8.0.0",
-    "yargs": "^7.0.2",
     "gulp-add-src": "latest",
     "gulp-concat": "latest",
+    "gulp-file-include": "^1.2.0",
     "gulp-if": "latest",
     "gulp-ignore": "latest",
     "gulp-imagemin": "latest",
     "gulp-jshint": "latest",
     "gulp-livereload": "latest",
+    "gulp-load-plugins": "^1.5.0",
     "gulp-merge": "latest",
     "gulp-minify-css": "latest",
     "gulp-notify": "latest",
     "gulp-postcss": "latest",
+    "gulp-rename": "^1.2.2",
     "gulp-sass": "latest",
     "gulp-sourcemaps": "latest",
     "gulp-svg-sprite": "latest",
@@ -38,6 +38,8 @@
     "imagemin-mozjpeg": "latest",
     "imagemin-pngquant": "latest",
     "imagemin-svgo": "latest",
-    "jshint-stylish": "latest"
+    "jshint-stylish": "latest",
+    "lost": "^8.0.0",
+    "yargs": "^7.0.2"
   }
 }
